--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "formik": "^2.4.5",
+    "framer-motion": "^11.1.9",
     "lodash": "^4.17.21",
     "next": "14.1.0",
     "react": "^18",
