--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.7",
     "formik": "^2.4.5",
     "framer-motion": "^11.1.9",
+    "js-cookies": "^1.0.4",
     "lodash": "^4.17.21",
     "next": "14.1.0",
     "react": "^18",
