--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-cookies": "^1.0.4",
     "lodash": "^4.17.21",
     "next": "14.1.0",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.4",
