--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "betjockey-ui-admin",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "axios": "^1.6.7",
-    "formik": "^2.4.5",
-    "framer-motion": "^11.1.9",
-    "js-cookies": "^1.0.4",
-    "lodash": "^4.17.21",
-    "next": "14.1.0",
-    "prop-types": "^15.8.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-toastify": "^10.0.4",
-    "sass": "^1.72.0",
-    "styled-components": "^6.1.8",
-    "sweetalert2": "^11.10.6",
-    "yup": "^1.3.3"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-do-expressions": "^7.23.3",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
-  }
+	"name": "betjockey-ui-admin",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"axios": "^1.7.5",
+		"formik": "^2.4.6",
+		"framer-motion": "^11.3.30",
+		"js-cookies": "^1.0.4",
+		"lodash": "^4.17.21",
+		"next": "^14.2.6",
+		"prop-types": "^15.8.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-toastify": "^10.0.5",
+		"sass": "^1.77.8",
+		"sharp": "^0.33.5",
+		"styled-components": "^6.1.12",
+		"sweetalert2": "^11.6.13",
+		"yup": "^1.4.0",
+		"eslint": "^8.57.0",
+		"eslint-config-next": "14.1.4"
+	},
+	"devDependencies": {
+		"@babel/plugin-proposal-do-expressions": "^7.24.7"
+	}
 }
