--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 	},
 	"dependencies": {
 		"axios": "^1.7.5",
+		"eslint": "^8.57.0",
+		"eslint-config-next": "14.1.4",
 		"formik": "^2.4.6",
 		"framer-motion": "^11.3.30",
-		"js-cookies": "^1.0.4",
+		"js-cookie": "^3.0.5",
 		"lodash": "^4.17.21",
 		"next": "^14.2.6",
 		"prop-types": "^15.8.1",
@@ -23,9 +25,7 @@
 		"sharp": "^0.33.5",
 		"styled-components": "^6.1.12",
 		"sweetalert2": "^11.6.13",
-		"yup": "^1.4.0",
-		"eslint": "^8.57.0",
-		"eslint-config-next": "14.1.4"
+		"yup": "^1.4.0"
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-do-expressions": "^7.24.7"
