--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"prop-types": "^15.8.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-number-format": "^5.4.2",
 		"react-toastify": "^10.0.5",
 		"sass": "^1.77.8",
 		"sharp": "^0.33.5",
