--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"sharp": "^0.33.5",
 		"styled-components": "^6.1.12",
 		"sweetalert2": "^11.6.13",
+		"translate": "^3.0.1",
 		"yup": "^1.4.0"
 	},
 	"devDependencies": {
