--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-dom": "^18.3.1",
 		"react-number-format": "^5.4.2",
 		"react-toastify": "^10.0.5",
+		"recharts": "^2.15.1",
 		"sass": "^1.77.8",
 		"sharp": "^0.33.5",
 		"styled-components": "^6.1.12",
