feat: Add reports functionality with filters, generator, and history
- Updated .gitignore to exclude CLAUDE.md
- Modified package.json to add custom development script
- Created ReportsLayout component for report pages
- Implemented ReportsPage component with access control and loading state
- Enhanced LeftMenuBar to include navigation to reports
- Developed ReportFilters component for filtering report data
- Introduced ReportGenerator component for generating and downloading reports
- Added ReportHistory component to display previously generated reports
- Created ReportsPanel to encapsulate report-related components
- Implemented useReports hook for managing report state and service interactions
- Added middleware configuration to protect report routes
- Developed reportsService for handling API interactions related to reports
- Created reportsServiceFetch for alternative fetch-based report generation

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
+		"dev:custom": "PORT=3006 HOSTNAME=170.10.10.1 next dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
