--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,6 @@
 {
   "presets": ["next/babel"],
-  "plugins": ["babel-plugin-styled-components", "styled-components", { "ssr": true }]
+  "plugins": [
+    ["styled-components", { "ssr": true }]
+  ]
 }
