feat: Add room statistics service and websocket service for real-time updates
- Implemented `roomStatisticsService` to fetch room statistics, including history and current metrics.
- Created `websocketService` to manage WebSocket connections and handle events related to room status changes.
- Added utility functions for checking socket listeners and debugging WebSocket events.
- Introduced diagnostics and testing tools for WebSocket configurations and namespaces.
- Updated global styles to ensure proper layout in the application.

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,10 @@ CSRF_SECRET=your-csrf-secret-key-change-this-in-production
 NEXT_PUBLIC_API_HOST=http://localhost:3001
 NEXT_PUBLIC_API_URL=/api/v1
 
+# WebSocket Configuration (Client-side - will be exposed)
+NEXT_PUBLIC_WS_SERVER_PATH=http://localhost:3002
+NEXT_PUBLIC_WS_SERVER_URI=/betjockey/bingo/socket.io
+
 # Security Configuration
 ALLOWED_ORIGINS=http://localhost:3000,https://yourdomain.com
 RATE_LIMIT_WINDOW_MS=900000
