--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"jose": "^6.0.11",
 		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
+		"jwt-decode": "^4.0.0",
 		"lodash": "^4.17.21",
 		"next": "^14.2.6",
 		"prop-types": "^15.8.1",
@@ -35,6 +36,7 @@
 		"recharts": "^2.15.1",
 		"sass": "^1.77.8",
 		"sharp": "^0.33.5",
+		"socket.io-client": "^4.8.1",
 		"styled-components": "^6.1.12",
 		"sweetalert2": "^11.6.13",
 		"translate": "^3.0.1",
